# meu_universo_cientifico

./: README.md
meu_universo_cientifico/: .env  .gitignore  pyproject.toml
meu_universo_cientifico/keys/: keys.py
meu_universo_cientifico/projects/fisica/nasa_style/telemetry/: transferencia_hohmann.py
meu_universo_cientifico/projects/games_and_engines/pygame/simulations/: honmann.py
meu_universo_cientifico/tests/: app_fisica.py  check_lab.py  full_system_check.py  hello.py  lanca_foquete.py  simulador_quantico.py  test_aer.py
