[project]
name = "meu_universo_cientifico"
version = "0.1.0"
description = "Laboratório de Física Computacional e Biohacking"
authors = [
    { name = "Tiago Rodrigues", email = "tiagorodriguesskt@gmail.com" }
]
requires-python = ">=3.11,<3.12"
dependencies = [
    "astropy>=7.2.0",
    "biopython>=1.86",
    "customtkinter>=5.2.2",
    "manim>=0.20.1",
    "matplotlib>=3.10.8",
    "mdtraj>=1.11.1.post1",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "pygame>=2.6.1",
    "qiskit>=2.3.1",
    "qiskit-aer>=0.17.2",
    "rdkit-pypi>=2022.9.5",
    "scipy>=1.17.1",
    "skyfield>=1.54",
    "ursina>=7.0.0",
]

[tool.uv]
# Força o UV a ignorar subprojetos e focar apenas na raiz
managed = true
package = false

[tool.uv.workspace]
# Deixamos vazio para evitar que o UV procure outros pyproject.toml dentro das pastas
exclude = ["projects/*", "playground/*"]
